fixed styling issue of main heading being squished on galaxy fold phones

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -115,6 +115,7 @@
   /* border: 1px solid #fff; */
   border-radius: 8px;
   padding-top: 12px;
+  font-size: 1rem;
   padding-bottom: 12px;
   padding-right: 10px;
   padding-left: 15px;
@@ -124,6 +125,7 @@
   /* box-shadow: rgba(207, 255, 4, 0.5) 0px 5px 10px -5px; */
 
   letter-spacing: 9px;
+  /* font-size: 20px; */
   /* text-shadow: 1px 1px 2px #cfff04, 0px -1px 3px rgba(255, 255, 255, 0.3); */
 }
 
@@ -157,5 +159,19 @@
   }
   .h1-tag {
     margin-right: 20px;
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 320px) {
+  .h1-tag {
+    font-size: 10px;
+  }
+  .main-h2 {
+    font-size: 12px;
+  }
+
+  p {
+    font-size: 10px;
   }
 }
